openshift/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djangotodos
  labels:
    app: djangotodos
spec:
  selector:
    matchLabels:
      app: djangotodos
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: djangotodos
    spec:
      containers:
      - name: djangotodos
        image: quay.io/jkeam/djangotodos
        ports:
        - containerPort: 8000
          name: theport
        command: ["/bin/sh"]
        args: ["-c", "python ./manage.py runserver 0.0.0.0:8000"]
        startupProbe:
          httpGet:
            path: /healthz
            port: 8000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 2
          periodSeconds: 2
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 10
      restartPolicy: Always
