openshift/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djangotodos
  labels:
    app: djangotodos
spec:
  ports:
    - name: port8000
      port: 8000
      targetPort: 8000
  selector:
    app: djangotodos
  type: ClusterIP
