openshift/app/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: djangotodos
  labels:
    app: djangotodos
spec:
  path: /
  to:
    kind: Service
    name: djangotodos
    weight: 100
  port:
    targetPort: port8000
  tls:
    termination: edge
